package com.designpatterns.datasource;

import java.util.List;

public interface DataSource {
    List<Double> readData();
}
