@startuml
skinparam classAttributeIconSize 0

package model {
    class TemperatureData {
        - temperatures: List<Double>
        + addTemp(temp: double): void
        + getAllTemps(): List<Double>
        + isEmpty(): boolean
        + size(): int
    }
}

package datasource {
    interface DataSource {
        + readData(): List<Double>
    }

    class SensorDataSource {
        - NORMAL_MIN: double = 20.0
        - NORMAL_MAX: double = 30.0
        + readData(): List<Double>
    }

    class FileDataSource {
        - filePath: String
        + FileDataSource(filePath: String)
        + readData(): List<Double>
    }

    class KeyboardDataSource {
        - scanner: Scanner
        + KeyboardDataSource()
        + readData(): List<Double>
    }

    class DataSourceFactory {
        + TYPE_SENSOR: String = "sensor"
        + TYPE_FILE: String = "file"
        + TYPE_KEYBOARD: String = "keyboard"
        + createDataSource(type: String, args: String...): DataSource
    }

    DataSource <|.. SensorDataSource
    DataSource <|.. FileDataSource
    DataSource <|.. KeyboardDataSource
    DataSourceFactory ..> DataSource :creates
}

package strategy {
    interface AnalysisStrategy {
        + findMax(data: TemperatureData): double
        + findMin(data: TemperatureData): double
        + getAbnormalTemps(data: TemperatureData): List<Double>
    }
}

@enduml
